Home page roughed out

--- a/Service_skin.html
+++ b/Service_skin.html
@@ -28,7 +28,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class=><a href="Our_team.html">Our Team <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="Our_team.html">Our Team <span class="sr-only">(current)</span></a></li>
         <li><a href="contact_us.html">Contact Us</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Our Services<span class="caret"></span></a>
@@ -45,7 +45,12 @@
           </ul>
         </li>
       </ul>
-      
+      <form class="navbar-form navbar-left">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="googlecalapi.html">Google Cal API</a></li>
         <li class="dropdown">
@@ -60,8 +65,7 @@
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+</div><!-- /.container-fluid -->
 
 	<article>
 		Migas XOXO bitters sustainable scenester tbh flannel. Ennui drinking vinegar selfies cliche humblebrag vinyl kickstarter jianbing. Tofu master cleanse prism iPhone flannel bushwick. Jean shorts bushwick brunch aesthetic messenger bag, mixtape wayfarers roof party pour-over four loko poke listicle meggings. Affogato tofu tote bag, pitchfork humblebrag helvetica YOLO put a bird on it pork belly artisan photo booth. Microdosing mumblecore edison bulb, YOLO next level man braid cliche quinoa. 3 wolf moon vape art party farm-to-table man bun actually, cred pour-over marfa typewriter VHS street art yuccie meggings. Banh mi cronut jean shorts, cornhole humblebrag cliche gentrify. Selfies ennui craft beer activated charcoal.
